[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://Textures/OnePixel.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64.2514 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
move_speed = 30.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.254902, 0, 0, 1 )
scale = Vector2( 128, 128 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ElfRayCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="HPBar" type="Node2D" parent="."]
position = Vector2( 0, -96 )

[node name="Background" type="Sprite" parent="HPBar"]
modulate = Color( 0.00392157, 0.0862745, 0, 1 )
scale = Vector2( 142, 10 )
texture = ExtResource( 2 )

[node name="HP" type="TextureProgress" parent="HPBar"]
modulate = Color( 1, 0.435294, 0, 1 )
margin_left = -70.0
margin_top = -4.0
margin_right = -69.0
margin_bottom = -3.0
rect_scale = Vector2( 140, 8 )
value = 100.0
texture_progress = ExtResource( 2 )

[node name="HPLabel" type="Label" parent="HPBar"]
margin_left = -9.0
margin_top = -7.0
margin_right = 8.0
margin_bottom = 7.0
text = "10"

[node name="TimeToKill" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="TimeToKillLabel" type="Label" parent="."]
margin_left = -9.0
margin_top = -7.0
margin_right = 31.0
margin_bottom = 7.0
text = "30"

[connection signal="timeout" from="TimeToKill" to="." method="_on_TimeToKill_timeout"]
